[SAM-7148] Fix firefox account code box dash being too low

--- a/src/styles/pages/_assistance-listing-operations.scss
+++ b/src/styles/pages/_assistance-listing-operations.scss
@@ -28,4 +28,13 @@
     font-weight: 400;
     margin-bottom: 1em;
   }
+
+  .code-box{
+    float: left;
+  }
+
+  .code-separator{
+    float: left;
+    padding: 12px 5px;
+  }
 }
